[gd_scene load_steps=10 format=2]

[ext_resource path="res://Script/Characters/states/motion/Dash.gd" type="Script" id=1]
[ext_resource path="res://assets/effects/dust_1.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0.466667, 0.466667, 0.466667, 0.466667, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
lifetime_randomness = 0.7
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 0.15
scale = 2.2
scale_random = 0.5
color_ramp = SubResource( 3 )
anim_speed_curve = SubResource( 6 )

[sub_resource type="ParticlesMaterial" id=7]
lifetime_randomness = 0.7
emission_shape = 1
emission_sphere_radius = 15.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 35.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 0.15
scale = 3.0
scale_random = 1.0
color_ramp = SubResource( 3 )
anim_speed_curve = SubResource( 6 )

[node name="Dash" type="Node"]
script = ExtResource( 1 )

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]

[node name="DustTrail" type="Particles2D" parent="."]
self_modulate = Color( 0.764706, 0.764706, 0.764706, 0.764706 )
show_behind_parent = true
material = SubResource( 1 )
emitting = false
amount = 16
lifetime = 1.2
one_shot = true
explosiveness = 0.8
local_coords = false
process_material = SubResource( 4 )
texture = ExtResource( 2 )

[node name="DustBurst" type="Particles2D" parent="."]
self_modulate = Color( 0.764706, 0.764706, 0.764706, 0.764706 )
show_behind_parent = true
material = SubResource( 1 )
emitting = false
amount = 20
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 7 )
texture = ExtResource( 2 )
